# chain-scope

./: README.md  deployment.yaml  run_hotel.sh
agent/: .dockerignore  Cargo.toml  Dockerfile  build.rs
agent/bpftrace-script/: greenlet_tls.bt  grpc.bt
agent/gso-force-tc/: setup-veth.sh
agent/src/: k8s.rs  main.rs  otel.rs
agent/src/bpf/: context.h  event.h  grpc.h  hooks.bpf.c  hooks.h  ip.h  net_helpers.h  sampling.h  socket.h  tcp.h  trace_info.h  udp.h
agent/src/bpf/.output/: hooks.skel.rs
agent/src/bpf/common/: config.h  http.h  macros.h
agent/src/bpf/test/: goroutine.h
benchmark/: plot_goroutine.py  plot_hotel_loss.py  plot_hotel_qps_cpu.py  plot_nginx.py  run_all_benchmark.sh
controller/: Dockerfile  main.py  main_grpc.py  main_http.py  requirements_http.txt
samples/: hotel-loadgen.sh
samples/hotel-test/: beyla.yaml  controller.yaml  deepflow-agent-config.yaml  deepflow-values-custom.yaml  deploy_deepflow.sh  otel-auto-jaeger.yaml  otel-auto-sampling-rate.yaml
samples/istio-envoy-bookinfo/: bookinfo.yaml  gateway.yaml
samples/nginx-test/: beyla.yaml  deepflow-agent-config.yaml  deepflow-values-custom.yaml  loadgen.yaml  (+2 more)
scripts/: benchmark_cpu.sh  benchmark_goroutine.sh  benchmark_hotel_accuracy_all-3node.sh  benchmark_hotel_accuracy_all.sh  benchmark_hotel_qps_cpu_all-3node.sh  benchmark_hotel_qps_cpu_all.sh  benchmark_tagging_accuracy.sh  benchmark_time.sh  build_push_image.sh  clean.sh  extract_traces_from_jaeger.py  qurey_deepflow_accuracy.sh  run.sh  run_debug.sh  view_agent_log.sh  view_controller_collector.sh  view_controller_log.sh
(+87 files in other folders)
